--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run -A --watch main.ts",
-    "fetch-beers": "deno run beer-fetch.mjs"
+    "dev": "deno run -A --watch src/main.ts",
+    "fetch-beers": "deno run src/utils/beer-fetch.mjs"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
