Add install:parallel task

--- a/deno.json
+++ b/deno.json
@@ -3,5 +3,6 @@
     "dev:backend": "cd backend && deno run dev",
     "dev:frontend": "cd frontend && pnpm run dev",
     "dev": "deno run dev:backend & deno run dev:frontend"
+    "install:parallel": "cd backend && deno install & cd frontend && pnpm install",
   }
 }
